--- a/plugins/chat/assets/javascripts/discourse/components/chat/header/icon/unread-indicator.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/header/icon/unread-indicator.hbs
@@ -1,5 +1,5 @@
 {{#if this.showUrgentIndicator}}
-  <div class="chat-channel-unread-indicator urgent">
+  <div class="chat-channel-unread-indicator -urgent">
     <div class="chat-channel-unread-indicator__number">
       {{this.unreadCountLabel}}
     </div>
