--- a/plugins/chat/assets/stylesheets/common/chat-thread-unread-indicator.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-thread-unread-indicator.scss
@@ -1,22 +1,12 @@
-@mixin chat-thread-unread-indicator {
+.chat-thread-header-unread-indicator,
+.chat-thread-list-item-unread-indicator {
+  @include chat-unread-indicator;
   display: flex;
   align-items: center;
   justify-content: center;
   width: auto;
-  min-width: 14px;
-  padding: 3px;
-  font-size: 0.8rem;
+  height: auto;
+  padding: 0.21em 0.42em;
   border-radius: 1em;
-  background: var(--tertiary-med-or-tertiary);
-
-  &__number {
-    font-weight: bold;
-    color: var(--secondary);
-    line-height: 1;
-  }
-}
-
-.chat-thread-header-unread-indicator,
-.chat-thread-list-item-unread-indicator {
-  @include chat-thread-unread-indicator;
+  min-width: 0.6em;
 }
