--- a/plugins/chat/assets/stylesheets/common/base-common.scss
+++ b/plugins/chat/assets/stylesheets/common/base-common.scss
@@ -79,66 +79,25 @@ html.ios-device.keyboard-visible body #main-outlet .full-page-chat {
   }
 }
 
-.chat-channel-unread-indicator {
-  @include unselectable;
-
-  width: 14px;
-  height: 14px;
-  border-radius: 100%;
-  box-sizing: content-box;
-  -webkit-touch-callout: none;
-  background: var(--tertiary-med-or-tertiary);
-  color: var(--secondary);
-  font-size: var(--font-down-2);
-  text-align: center;
-
-  &.urgent {
-    background: var(--success);
-    color: var(--secondary);
-
-    .number-wrap {
-      position: relative;
-      width: 100%;
-      height: 100%;
-
-      .number {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-    }
-  }
-}
-
 .header-dropdown-toggle.chat-header-icon {
   .icon {
     .chat-channel-unread-indicator {
-      border-radius: 1em;
+      @include chat-unread-indicator;
       border: 2px solid var(--header_background);
       position: absolute;
+      top: 0;
       right: 2px;
-      bottom: 2px;
-      transition: border-color linear 0.15s;
 
-      &.urgent {
+      &.-urgent {
         display: flex;
         align-items: center;
         justify-content: center;
         width: auto;
-        min-width: 14px;
-        padding: 2px;
+        height: 1em;
+        min-width: 0.6em;
+        padding: 0.21em 0.42em;
+        top: -1px;
         right: 0;
-      }
-
-      &__number {
-        font-size: 0.7rem;
-        line-height: 15px;
-        height: inherit;
-
-        &.-too-high {
-          font-size: 1.25rem;
-        }
       }
     }
   }
