--- a/app/assets/stylesheets/desktop/topic-post.scss
+++ b/app/assets/stylesheets/desktop/topic-post.scss
@@ -325,6 +325,10 @@ pre.codeblock-buttons:hover {
       background: var(--primary-low);
     }
   }
+
+  .toggle-summary .summarization-buttons .topic-strategy-summarization {
+    margin-left: 10px;
+  }
 }
 
 #topic-footer-buttons {
