--- a/plugins/chat/assets/stylesheets/common/index.scss
+++ b/plugins/chat/assets/stylesheets/common/index.scss
@@ -56,3 +56,4 @@
 @import "chat-thread-header";
 @import "chat-thread-list-header";
 @import "chat-thread-unread-indicator";
+@import "channel-summary-modal";
