--- a/app/assets/stylesheets/mobile/topic-post.scss
+++ b/app/assets/stylesheets/mobile/topic-post.scss
@@ -199,6 +199,16 @@ a.reply-to-tab {
     background: var(--blend-primary-secondary-5);
     width: 100%;
   }
+
+  .toggle-summary {
+    .summarization-buttons {
+      flex-direction: column;
+
+      .topic-strategy-summarization {
+        margin-top: 10px;
+      }
+    }
+  }
 }
 
 #topic-footer-buttons {
