--- a/app/assets/stylesheets/common/base/reviewables.scss
+++ b/app/assets/stylesheets/common/base/reviewables.scss
@@ -495,7 +495,7 @@
       background: var(--primary-very-low);
       color: var(--primary-high);
       font-size: var(--font-down-2);
-      box-shadow: shadow("dropdown-lite");
+      box-shadow: var(--shadow-dropdown);
       margin-left: 50%;
       transform: translateX(-50%);
       border-radius: 4px;
