--- a/app/assets/stylesheets/common/base/d-popover.scss
+++ b/app/assets/stylesheets/common/base/d-popover.scss
@@ -5,7 +5,7 @@ $d-popover-border: var(--primary-low);
   color: var(--primary);
   background: $d-popover-background;
   border: 1px solid var(--primary-low);
-  box-shadow: shadow("menu-panel");
+  box-shadow: var(--shadow-menu-panel);
 }
 
 .tippy-box[data-placement^="top"] .tippy-svg-arrow > svg {
