DEV: Temporarily hide form when editing topic with template (#22099)

--- a/app/assets/javascripts/discourse/app/components/composer-editor.hbs
+++ b/app/assets/javascripts/discourse/app/components/composer-editor.hbs
@@ -18,6 +18,7 @@
   @popupMenuOptions={{this.popupMenuOptions}}
   @formTemplateIds={{this.formTemplateIds}}
   @replyingToTopic={{this.composer.replyingToTopic}}
+  @editingPost={{this.composer.editingPost}}
   @disabled={{this.disableTextarea}}
   @outletArgs={{hash composer=this.composer editorType="composer"}}
 >
