--- a/app/assets/javascripts/discourse/app/components/form-template-field/checkbox.hbs
+++ b/app/assets/javascripts/discourse/app/components/form-template-field/checkbox.hbs
@@ -7,5 +7,8 @@
       required={{if @validations.required "required" ""}}
     />
     {{@attributes.label}}
+    {{#if @validations.required}}
+      {{d-icon "asterisk" class="form-template-field__required-indicator"}}
+    {{/if}}
   </label>
 </div>
