--- a/app/assets/javascripts/discourse/app/components/form-template-field/textarea.hbs
+++ b/app/assets/javascripts/discourse/app/components/form-template-field/textarea.hbs
@@ -1,6 +1,11 @@
 <div class="control-group form-template-field" data-field-type="textarea">
   {{#if @attributes.label}}
-    <label class="form-template-field__label">{{@attributes.label}}</label>
+    <label class="form-template-field__label">
+      {{@attributes.label}}
+      {{#if @validations.required}}
+        {{d-icon "asterisk" class="form-template-field__required-indicator"}}
+      {{/if}}
+    </label>
   {{/if}}
   <Textarea
     name={{@attributes.label}}
