FIX: Update sidebar to be navigation menu (#22101)
Communities can use sidebar or header dropdown, therefore navigation menu is a better name settings in 2 places:

- Old user sidebar preferences;
- Site setting about default tags and categories.

--- a/app/assets/javascripts/discourse/app/components/sidebar/user/tags-section.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/user/tags-section.hbs
@@ -34,7 +34,7 @@
       {{else}}
         <Sidebar::SectionLink
           @linkName="configure-tags"
-          @route="preferences.sidebar"
+          @route="preferences.navigation-menu"
           @prefixType="icon"
           @prefixValue="pencil-alt"
           @model={{this.currentUser}}
@@ -54,7 +54,7 @@
         @prefixValue="wrench"
         @route="adminSiteSettingsCategory"
         @model="sidebar"
-        @query={{hash filter="default_sidebar_tags"}}
+        @query={{hash filter="default_navigation_menu_tags"}}
       />
     {{/if}}
   </Sidebar::Section>
