--- a/app/assets/javascripts/discourse/app/components/sidebar/user/categories-section.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/user/categories-section.hbs
@@ -50,7 +50,7 @@
       {{else}}
         <Sidebar::SectionLink
           @linkName="configure-categories"
-          @route="preferences.sidebar"
+          @route="preferences.navigation-menu"
           @prefixType="icon"
           @prefixValue="pencil-alt"
           @model={{this.currentUser}}
@@ -68,13 +68,13 @@
 
     {{#if this.shouldDisplayDefaultConfig}}
       <Sidebar::SectionLink
-        @linkName="configure-default-sidebar-categories"
+        @linkName="configure-default-navigation-menu-categories"
         @content={{i18n "sidebar.sections.categories.configure_defaults"}}
         @prefixType="icon"
         @prefixValue="wrench"
         @route="adminSiteSettingsCategory"
         @model="sidebar"
-        @query={{hash filter="default_sidebar_categories"}}
+        @query={{hash filter="default_navigation_menu_categories"}}
       />
     {{/if}}
   </Sidebar::Section>
