--- a/plugins/chat/assets/stylesheets/common/chat-message.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-message.scss
@@ -64,11 +64,11 @@
   &.is-threaded {
     display: grid;
     grid-template-columns: var(--message-left-width) 1fr;
-    grid-template-rows: auto 32px;
+    grid-template-rows: auto;
     grid-template-areas:
       "avatar message"
       "threadindicator threadindicator";
-
+    padding: 0.65rem 1rem !important;
     .chat-user-avatar {
       grid-area: avatar;
     }
