--- a/plugins/chat/assets/stylesheets/common/index.scss
+++ b/plugins/chat/assets/stylesheets/common/index.scss
@@ -56,4 +56,5 @@
 @import "chat-thread-header";
 @import "chat-thread-list-header";
 @import "chat-thread-unread-indicator";
+@import "chat-thread-participants";
 @import "channel-summary-modal";
