--- a/plugins/chat/assets/stylesheets/mobile/index.scss
+++ b/plugins/chat/assets/stylesheets/mobile/index.scss
@@ -12,3 +12,4 @@
 @import "chat-thread";
 @import "chat-threads-list";
 @import "chat-thread-settings-modal";
+@import "chat-message-thread-indicator";
