--- a/plugins/chat/assets/javascripts/discourse/components/chat-message-thread-indicator.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message-thread-indicator.hbs
@@ -3,11 +3,50 @@
   @models={{@message.thread.routeModels}}
   class="chat-message-thread-indicator"
 >
-  <span class="chat-message-thread-indicator__replies-count">
-    {{i18n "chat.thread.replies" count=@message.threadReplyCount}}
-  </span>
-  <span class="chat-message-thread-indicator__view-thread overflow-ellipsis">
-    {{i18n "chat.thread.view_thread"}}{{#if this.threadTitle}}:
-      {{replace-emoji this.threadTitle}}{{/if}}
-  </span>
+  {{#unless this.chatStateManager.isDrawerActive}}
+    <div class="chat-message-thread-indicator__last-reply-avatar">
+      <ChatUserAvatar
+        @user={{@message.thread.preview.lastReplyUser}}
+        @avatarSize="small"
+      />
+    </div>
+  {{/unless}}
+  <div class="chat-message-thread-indicator__body">
+    <div class="chat-message-thread-indicator__last-reply-metadata">
+      <div class="chat-message-thread-indicator__last-reply-user">
+        {{#if (or this.site.mobileView this.chatStateManager.isDrawerActive)}}
+          <span
+            class="chat-message-thread-indicator__last-reply-avatar -mobile"
+          >
+            <ChatUserAvatar
+              @user={{@message.thread.preview.lastReplyUser}}
+              @avatarSize="tiny"
+            />
+          </span>
+        {{/if}}
+        <span class="chat-message-thread-indicator__last-reply-username">
+          {{@message.thread.preview.lastReplyUser.username}}
+        </span>
+      </div>
+      <span><span class="chat-message-thread-indicator__last-reply-label">{{i18n
+            "chat.thread.last_reply"
+          }}</span>{{format-date
+          @message.thread.preview.lastReplyCreatedAt
+          leaveAgo="true"
+        }}</span>
+
+      |
+      <span class="chat-message-thread-indicator__replies-count">
+        {{i18n "chat.thread.replies" count=@message.thread.preview.replyCount}}
+      </span>
+
+    </div>
+    <div class="chat-message-thread-indicator__last-reply-excerpt">
+      {{replace-emoji (html-safe @message.thread.preview.lastReplyExcerpt)}}
+    </div>
+  </div>
+
+  <div class="chat-message-thread-indicator__participants">
+    <Chat::Thread::Participants @thread={{@message.thread}} />
+  </div>
 </LinkTo>
