FIX: allows selection of messages in threads (#22119)
This commit fixes the selection of message in threads and also applies various refactorings
- improves specs and especially page objects/components
- makes the channel/thread panes responsible of the state
- adds an animationend modifier
- continues to follow the logic of "state" should be displayed as data attributes on component by having a new `data-selected` attribute on chat messages

--- a/plugins/chat/assets/javascripts/discourse/components/chat-channel.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-channel.hbs
@@ -68,14 +68,12 @@
   />
 
   {{#if this.pane.selectingMessages}}
-    <ChatSelectionManager
-      @selectedMessageIds={{this.pane.selectedMessageIds}}
-      @chatChannel={{@channel}}
-      @cancelSelecting={{action
-        this.pane.cancelSelecting
-        @channel.selectedMessages
+    <Chat::SelectionManager
+      @enableMove={{and
+        (not @channel.isDirectMessageChannel)
+        @channel.canModerate
       }}
-      @context="channel"
+      @pane={{this.pane}}
     />
   {{else}}
     {{#if (or @channel.isDraft @channel.isFollowing)}}
