--- a/plugins/chat/assets/stylesheets/mobile/chat-selection-manager.scss
+++ b/plugins/chat/assets/stylesheets/mobile/chat-selection-manager.scss
@@ -1,5 +1,5 @@
 .chat-selection-management {
-  .chat-selection-management-buttons {
+  &__buttons {
     display: flex;
     flex-direction: column;
     width: 100%;
