--- a/app/assets/stylesheets/common/base/_topic-list.scss
+++ b/app/assets/stylesheets/common/base/_topic-list.scss
@@ -263,24 +263,29 @@
     .discourse-tag.box {
       margin-right: 0.25em;
     }
-    .participant-groups {
-      margin-left: 0.5em;
-      padding: 0 5px;
-      border: 1px solid var(--primary-low);
-      border-radius: 0.25em;
-      min-width: 3em;
-      @include ellipsis;
 
-      > a {
-        display: flex;
-        align-items: center;
-        height: 1.25em;
-        color: var(--primary-high);
-        .mobile-view & {
-          height: 1.1em;
-        }
-        .d-icon {
-          margin-right: 5px;
+    .participant-group-wrapper {
+      display: flex;
+
+      .participant-group {
+        margin-left: 0.5em;
+        padding: 0 5px;
+        border: 1px solid var(--primary-low);
+        border-radius: 0.25em;
+        min-width: 3em;
+        @include ellipsis;
+
+        > a {
+          display: flex;
+          align-items: center;
+          height: 1.25em;
+          color: var(--primary-high);
+          .mobile-view & {
+            height: 1.1em;
+          }
+          .d-icon {
+            margin-right: 5px;
+          }
         }
       }
     }
