FEATURE: Allow users to manually track threads without replying (#22100)
This commit adds a tracking dropdown to each individual thread, similar to topics,
that allows the user to change the notification level for a thread manually. Previously
the user had to reply to a thread to track it and see unread indicators.

Since the user can now manually track threads, the thread index has also been changed
to only show threads that the user is a member of, rather than threads that they had sent
messages in.

Unread indicators also respect the notification level -- Normal level thread tracking
will not show unread indicators in the UI when new messages are sent in the thread.

--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread/header.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread/header.hbs
@@ -17,6 +17,10 @@
   </span>
 
   <div class="chat-thread-header__buttons">
+    <ThreadNotificationsButton
+      @value={{this.threadNotificationLevel}}
+      @onChange={{this.updateThreadNotificationLevel}}
+    />
     {{#if this.canChangeThreadSettings}}
       <DButton
         @action={{this.openThreadSettings}}
