FIX: various mobile chat improvements (#22132)
- FIX: improves reactions and thread indicator touch event on mobile
These "buttons" are located inside a scroll list which makes them very specific. The general idea is to ensure these events are passive and are not bubbling to the parent.
- DEV: moves state on top level message node
- FIX: ensures popover arrow has the correct border
- FIX: makes a message expanded by default
- FIX applies the same ios scroll fix on thread and channel
- UI: better active/hover state for thread indicator
- UI: attempts to follow more closely our BEM naming scheme
- FIX: reduces bottom padding on message with thread indicator and user info hidden
- UI: add padding for first message in thread
- FIX: prevents actions backdrop to open thread
- UI: makes thread indicator resizable

--- a/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
@@ -7,10 +7,27 @@
   {{/if}}
 
   <div
-    {{will-destroy this.teardownChatMessage}}
-    {{did-insert this.decorateCookedMessage}}
-    {{did-update this.decorateCookedMessage @message.id}}
-    {{did-update this.decorateCookedMessage @message.version}}
+    class={{concat-class
+      "chat-message-container"
+      (if this.pane.selectingMessages "-selectable")
+      (if @message.highlighted "-highlighted")
+      (if (eq @message.user.id this.currentUser.id) "is-by-current-user")
+      (if @message.staged "-staged" "-persisted")
+      (if this.hasActiveState "-active")
+      (if @message.bookmark "-bookmarked")
+      (if @message.deletedAt "-deleted")
+      (if @message.selected "-selected")
+      (if @message.error "-errored")
+      (if this.showThreadIndicator "has-thread-indicator")
+      (if this.hideUserInfo "-user-info-hidden")
+      (if this.hasReply "has-reply")
+    }}
+    data-id={{@message.id}}
+    data-thread-id={{@message.thread.id}}
+    {{did-insert this.didInsertMessage}}
+    {{did-update this.didUpdateMessageId @message.id}}
+    {{did-update this.didUpdateMessageVersion @message.version}}
+    {{will-destroy this.willDestroyMessage}}
     {{on "mouseenter" this.onMouseEnter passive=true}}
     {{on "mouseleave" this.onMouseLeave passive=true}}
     {{on "mousemove" this.onMouseMove passive=true}}
@@ -19,18 +36,6 @@
       this.handleLongPressEnd
       this.onLongPressCancel
     }}
-    class={{concat-class
-      "chat-message-container"
-      (if this.pane.selectingMessages "selecting-messages")
-      (if @message.highlighted "highlighted")
-      (if (eq @message.user.id this.currentUser.id) "is-by-current-user")
-      (if @message.staged "is-staged" "is-persisted")
-      (if @message.deletedAt "is-deleted")
-      (if (eq @message.id this.chat.activeMessage.model.id) "is-active")
-    }}
-    data-id={{@message.id}}
-    data-thread-id={{@message.thread.id}}
-    data-selected={{@message.selected}}
     {{chat/track-message
       (hash
         didEnterViewport=(fn @messageDidEnterViewport @message)
@@ -65,20 +70,7 @@
           />
         </div>
       {{else}}
-        <div
-          {{did-insert this.refreshStatusOnMentions}}
-          {{did-update this.refreshStatusOnMentions @message.version}}
-          {{did-update this.initMentionedUsers @message.version}}
-          class={{concat-class
-            "chat-message"
-            (if @message.deletedAt "deleted")
-            (if (and @message.inReplyTo (not this.hideReplyToInfo)) "is-reply")
-            (if this.showThreadIndicator "is-threaded")
-            (if this.hideUserInfo "user-info-hidden")
-            (if @message.error "errored")
-            (if @message.bookmark "chat-message-bookmarked")
-          }}
-        >
+        <div class="chat-message">
           {{#unless this.hideReplyToInfo}}
             <ChatMessageInReplyToIndicator @message={{@message}} />
           {{/unless}}
@@ -195,9 +187,9 @@
                   {{/if}}
 
                   {{#if this.mentionWarning.groups_with_too_many_members}}
-                    <p
-                      class="warning-item"
-                    >{{this.groupsWithTooManyMembers}}</p>
+                    <p class="warning-item">
+                      {{this.groupsWithTooManyMembers}}
+                    </p>
                   {{/if}}
                 {{/if}}
               </div>
