--- a/plugins/chat/assets/stylesheets/common/chat-message.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-message.scss
@@ -28,54 +28,8 @@
     @include chat-reaction;
   }
 
-  &.chat-action {
-    background-color: var(--highlight-bg);
-  }
-
-  &.errored {
-    color: var(--primary-medium);
-  }
-
-  &.deleted {
-    background-color: var(--danger-low);
-  }
-
   .not-mobile-device &.deleted:hover {
     background-color: var(--danger-hover);
-  }
-
-  &.is-reply {
-    display: grid;
-    grid-template-columns: var(--message-left-width) 1fr;
-    grid-template-rows: 30px auto;
-    grid-template-areas:
-      "replyto replyto"
-      "avatar message";
-
-    .chat-user-avatar {
-      grid-area: avatar;
-    }
-
-    .chat-message-content {
-      grid-area: message;
-    }
-  }
-
-  &.is-threaded {
-    display: grid;
-    grid-template-columns: var(--message-left-width) 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "avatar message"
-      "threadindicator threadindicator";
-    padding: 0.65rem 1rem !important;
-    .chat-user-avatar {
-      grid-area: avatar;
-    }
-
-    .chat-message-content {
-      grid-area: message;
-    }
   }
 
   .chat-message-content {
@@ -200,77 +154,105 @@
   }
 }
 
-.chat-message-container.highlighted .chat-message {
-  background-color: var(--tertiary-low) !important;
+.touch .chat-message-container {
+  &.-active {
+    background: var(--d-hover);
+    border-radius: 5px;
+
+    &.-bookmarked {
+      background: var(--highlight-low);
+    }
+  }
 }
 
-.chat-messages-container {
-  .chat-message {
-    &.chat-message-bookmarked {
-      background: var(--highlight-bg);
-    }
+.no-touch .chat-message-container {
+  &:hover,
+  &-active {
+    background: var(--d-hover);
+  }
 
+  &:hover {
     .chat-message-reaction-list .chat-message-react-btn {
-      display: none;
+      display: inline-block;
     }
   }
 
-  .chat-message-container {
-    background-color: var(--secondary);
-
-    .touch & {
-      &:active,
-      &.is-active {
-        background: var(--d-hover);
-        border-radius: 5px;
-      }
-
-      &.chat-message-bookmarked {
-        &:active,
-        &.is-active {
-          background: var(--highlight-low);
-        }
-      }
+  &.-active,
+  &:hover {
+    &.-bookmarked {
+      background: var(--highlight-medium);
     }
 
-    .no-touch & {
-      &.is-active,
-      &:hover,
-      &:active {
-        background: var(--d-hover);
-      }
+    &.-deleted {
+      background-color: var(--danger-medium);
+    }
 
-      &:hover {
-        .chat-message-react-btn {
-          display: inline-block;
-        }
-      }
-
-      &.chat-message-bookmarked {
-        &.is-active,
-        &:hover {
-          background: var(--highlight-medium);
-        }
-      }
+    &.-highlighted {
+      background-color: var(--tertiary-medium);
     }
   }
 }
 
-.chat-message-flagged {
-  display: inline-block;
-  color: var(--danger);
-  height: 100%;
-  padding: 0 0.3em;
-  cursor: pointer;
+.chat-message-container {
+  background-color: var(--secondary);
 
-  .flag-count,
-  .d-icon {
-    color: var(--danger);
+  &.-errored {
+    color: var(--primary-medium);
   }
-}
 
-.chat-action-text {
-  font-style: italic;
+  &.-deleted {
+    background-color: var(--danger-low);
+    padding-block: 0.25rem;
+  }
+
+  &.-bookmarked {
+    background: var(--highlight-bg);
+  }
+
+  &.-highlighted {
+    background-color: var(--tertiary-low);
+  }
+
+  &.has-reply {
+    display: grid;
+    grid-template-columns: var(--message-left-width) 1fr;
+    grid-template-rows: 30px auto;
+    grid-template-areas:
+      "replyto replyto"
+      "avatar message";
+
+    .chat-user-avatar {
+      grid-area: avatar;
+    }
+
+    .chat-message-content {
+      grid-area: message;
+    }
+  }
+
+  &.has-thread-indicator {
+    .chat-message {
+      display: grid;
+      grid-template-columns: var(--message-left-width) 1fr;
+      grid-template-rows: auto;
+      grid-template-areas:
+        "avatar message"
+        "threadindicator threadindicator";
+      padding-bottom: 0.65rem !important;
+
+      .chat-user-avatar {
+        grid-area: avatar;
+      }
+
+      .chat-message-content {
+        grid-area: message;
+      }
+    }
+  }
+
+  .chat-message-reaction-list .chat-message-react-btn {
+    display: none;
+  }
 }
 
 .has-full-page-chat .chat-message .onebox:not(img),
@@ -333,7 +315,7 @@
 
   &:hover,
   &:focus,
-  &:active {
+  .-active & {
     background: none !important;
   }
 
