--- a/plugins/chat/assets/javascripts/discourse/components/chat-message-thread-indicator.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message-thread-indicator.hbs
@@ -1,7 +1,12 @@
-<LinkTo
-  @route="chat.channel.thread"
-  @models={{@message.thread.routeModels}}
-  class="chat-message-thread-indicator"
+<div
+  class={{concat-class
+    "chat-message-thread-indicator"
+    (if this.isActive "-active")
+  }}
+  {{did-insert this.setup}}
+  {{will-destroy this.teardown}}
+  role="button"
+  title={{i18n "chat.threads.open"}}
 >
   {{#unless this.chatStateManager.isDrawerActive}}
     <div class="chat-message-thread-indicator__last-reply-avatar">
@@ -28,14 +33,14 @@
           {{@message.thread.preview.lastReplyUser.username}}
         </span>
       </div>
-      <span><span class="chat-message-thread-indicator__last-reply-label">{{i18n
-            "chat.thread.last_reply"
-          }}</span>{{format-date
+      <span class="chat-message-thread-indicator__last-reply-container">
+        {{format-date
           @message.thread.preview.lastReplyCreatedAt
           leaveAgo="true"
-        }}</span>
-
-      |
+          prefix=(i18n "chat.thread.last_reply")
+        }}
+      </span>
+      <span class="separator">|</span>
       <span class="chat-message-thread-indicator__replies-count">
         {{i18n "chat.thread.replies" count=@message.thread.preview.replyCount}}
       </span>
@@ -49,4 +54,4 @@
   <div class="chat-message-thread-indicator__participants">
     <Chat::Thread::Participants @thread={{@message.thread}} />
   </div>
-</LinkTo>
+</div>
