--- a/plugins/chat/assets/stylesheets/mobile/chat-message.scss
+++ b/plugins/chat/assets/stylesheets/mobile/chat-message.scss
@@ -25,7 +25,7 @@
     transition: transform 400ms;
     transform: scale(1);
 
-    &.is-long-pressed {
+    &.-active {
       animation: scale-animation 400ms;
     }
   }
