--- a/app/assets/stylesheets/common/base/menu-panel.scss
+++ b/app/assets/stylesheets/common/base/menu-panel.scss
@@ -257,7 +257,13 @@
 }
 
 .hamburger-panel {
+  // remove once glimmer search menu in place
   a.widget-link {
+    width: 100%;
+    box-sizing: border-box;
+    @include ellipsis;
+  }
+  a.search-link {
     width: 100%;
     box-sizing: border-box;
     @include ellipsis;
@@ -279,7 +285,35 @@
 }
 
 .menu-panel {
+  // remove once glimmer search menu in place
   .widget-link,
+  .categories-link {
+    padding: 0.25em 0.5em;
+    display: block;
+    color: var(--primary);
+    &:hover,
+    &:focus {
+      background-color: var(--d-hover);
+      outline: none;
+    }
+
+    .d-icon {
+      color: var(--primary-medium);
+    }
+
+    .new {
+      font-size: var(--font-down-1);
+      margin-left: 0.5em;
+      color: var(--primary-med-or-secondary-med);
+    }
+
+    &.show-help,
+    &.filter {
+      color: var(--tertiary);
+    }
+  }
+
+  .search-link,
   .categories-link {
     padding: 0.25em 0.5em;
     display: block;
