DEV: more reliable thread level spec (#22173)
Rely on frontend state instead of checking backend state.

--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread/header.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread/header.hbs
@@ -16,7 +16,12 @@
     {{replace-emoji this.label}}
   </span>
 
-  <div class="chat-thread-header__buttons">
+  <div
+    class={{concat-class
+      "chat-thread-header__buttons"
+      (if this.persistedNotificationLevel "-persisted")
+    }}
+  >
     <ThreadNotificationsButton
       @value={{this.threadNotificationLevel}}
       @onChange={{this.updateThreadNotificationLevel}}
